@@ -1,3 +1,9 @@
+2002-10-20  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* lib/Foomatic/DB.pm: Fixed "*ImageableArea" and "*PaperDimension"
+	  in the PPD-O-Matic PPD files. It got broken when introducing the
+	  code for variable paper size support.
+
 2002-10-19  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* foomatic-perl-data.c, lib/Foomatic/DB.pm: Support for custom
